2006-01-28  Peter Johanson <peter@peterjohanson.com>

	* configure.in: Bump gtk-sharp dep to 2.4.0. Everyone should already
	be using it anyways, and will prevent the one or two bug reports from
	people using ancient gtk-sharp-1.9.x stuff.

2006-01-28  Peter Johanson <peter@peterjohanson.com>

	* src/Global.cs: Fix issues with trying to run a second instance
	bringing down the whole lot. Done by 1) Doing Application.Init()
	before any dbus stuff, so that dbus uses the right mainloop (afaict),
	and 2) using SuppressFinalize on the remote object before returning
	(work around dbus-sharp bug). Note: To use the dbus interface on
	amd64, you need a fix for the dbus-sharp found at:
	https://bugs.freedesktop.org/show_bug.cgi?id=4410

2006-01-25  Peter Johanson <peter@peterjohanson.com>

	* src/About.cs: No really, avoid the bug in Gnome.About. I mean it
	this time.

2006-01-25  Peter Johanson <peter@peterjohanson.com>

	* src/About.cs: Fix odd bug with Gnome.About when being passed a
	zero-length string array for the documenters variable. Will submit bug
	upstream when a simple test case is created.

2006-01-24  Peter Johanson <peter@peterjohanson.com>

	* src/*: Convert to using Mono.Unix namespace as found in mono-1.1.x.
	* configure.in: Update to depend on mono-1.1.x. All major distros are
	shipping mono-1.1.x at this point (Debian has it in testing and
	backports exist for stable).

2006-01-22  Peter Johanson <peter@peterjohanson.com>

	* src/About.cs: Change copy right dates to a range, add myself to
	authors list, and update cover fetching string to attribute
	musicbrainz.org as well as amazon.com. Patch from floam on IRC.

2006-01-22  Peter Johanson <peter@peterjohanson.com>

	* configure.in: Add vi to ALL_LINGUAS.
	* NEWS: Add a bunch of translation updates/adds that I missed by not
	scanning po/ChangeLog, and fix one attribution based on po/ChangeLog.

2006-01-22  Peter Johanson <peter@peterjohanson.com>
